tests/ui/borrowck/borrowck-union-borrow-nested.stderr
error[E0503]: cannot use `u.c` because it was mutably borrowed
  --> $DIR/borrowck-union-borrow-nested.rs:24:21
   |
LL |             let ra = &mut u.s.a;
   |                      ---------- `u.s.a` is borrowed here
LL |             let b = u.c;
   |                     ^^^ use of borrowed `u.s.a`
LL |             ra.use_mut();
   |             -- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0503`.
